# src/main/java/com/example/Homebank/presentation/dto/auth/AccessTokenDTO.java
@@ -1,0 +1,8 @@
+package com.example.Homebank.presentation.dto.auth;
+
+public record AccessTokenDTO(
+        String accessToken,
+        String message,
+        String accountStatus
+) {
+}
